# OCR-System

./: .env.example  .gitignore  EDIT_RESULTS.md  EXCEL_APPEND_MODE.md  NUITKA_BUILD.md  OPTIMIZATION_PLAN.md  OPTIMIZATION_PROGRESS.md  QUICK_START_EXPORT.md  README.md  SETUP.md  build_nuitka.py  cache_logging_config.py  cache_manager_wrapper.py  config.py  config.py.example  dependency_manager.py  import_review_report.md  lightweight_config.py  ocr_cache_manager.py  ocr_engine_aliyun_new.py  ocr_engine_deepseek.py  ocr_engine_download_dialog.py  ocr_engine_downloader.py  ocr_engine_manager.py  ocr_engine_paddle.py  ocr_engine_rapid.py  online_ocr_plugin_manager.py  optimized_image_loader.py  qt_main.py  qt_run.py  qt_run_silent.pyw  requirements.txt  review_imports.py  test_lazy_loading.py  utils.py  启动程序(无黑窗).pyw  启动程序点这.bat  更新日志.txt
.windsurf/rules/: python.md
Env-Config/: setup_portable_python.sh
Pack/7z-Self-Extracting/: COMPRESSION_GUIDE.md  QUICK_START.md  README.md  create_sfx.bat  create_sfx.sh  create_sfx_fast.sh
Pack/Pyinstaller/: PACKAGING_STRATEGY.md  QUICK_BUILD_GUIDE.md  README.md  build_package.bat  build_package.sh  ocr_system.spec
docs/: CLEANUP_SUMMARY.md  PROJECT_STRUCTURE.md
docs/analysis/: CLEANUP_REPORT.md  FONT_USAGE_ANALYSIS.md  IMAGE_RESOURCE_CLEANUP_REPORT.md  MOBILE_VS_SERVER_MODEL_EVALUATION.md  MODEL_ANALYSIS_REPORT.md  OPTIMIZATION_REPORT.md  PACKAGE_SIZE_ANALYSIS.md  analyze_dependencies.py  analyze_font_usage.py  analyze_image_resources.py  analyze_model_size.py  analyze_package_size.py  analyze_startup_performance.py  dependency_analysis_report.md  image_resource_analysis.json  model_evaluation_report.json  model_evaluation_report.md  pillow_analysis.md  pyside6_analysis.md  startup_modules_report.txt  startup_performance_report.txt
docs/cache/: CACHE_ARCHITECTURE.md  CACHE_ERROR_MESSAGES.md  CACHE_TROUBLESHOOTING.md
docs/completion/: PROJECT_COMPLETION_SUMMARY.md  RELEASE_NOTES_v1.4.1_OPTIMIZATION.md
docs/guides/: CLEANUP_GUIDE.md  ENGINE_DOWNLOAD_GUIDE.md  RUN_INTEGRATION_TESTS.md  build_config.md
docs/integration_tests/: INTEGRATION_TESTS_README.md  INTEGRATION_TESTS_SUMMARY.md
docs/optimization/: CONFIG_FILE_OPTIMIZATION.md  CONFIG_OPTIMIZATION_SUMMARY.md  MODEL_COMPRESSION_GUIDE.md  MODEL_COMPRESSION_SUMMARY.md  PACKAGING_COMPARISON.md  PACKAGING_OPTIMIZATION_SUMMARY.md  QUICK_MODEL_COMPRESSION.md  RESOURCE_FILE_OPTIMIZATION_SUMMARY.md
docs/tasks/: TASK_10_ONLINE_OCR_PLUGINIZATION_COMPLETION.md  TASK_11_DOCUMENTATION_COMPLETION.md  TASK_11_STARTUP_OPTIMIZATION_COMPLETION.md  TASK_12_FINAL_VERIFICATION_REPORT.md  TASK_12_INTEGRATION_TESTING_COMPLETION.md  TASK_2_CACHE_WRAPPER_COMPLETION.md  TASK_3_DATABASE_RECOVERY_COMPLETION.md  TASK_4_BUILD_INSTRUCTIONS.md  TASK_4_SUMMARY.md  (+10 more)
models/: README.md
models/cpp_engine/: CLEAN_ENVIRONMENT_TEST_CHECKLIST.md  CMakeLists.txt  FUNCTION_USAGE_ANALYSIS.md  README.md  build.sh  build_windows.sh  clean_env_auto_check.bat  download_sqlite.sh  ocr_cache_engine.cpp  ocr_cache_engine.h  rebuild_dll.bat
portable_python/: python311._pth
(+56 files in other folders)
